# BratuGMRES

./: CMakeLists.txt  README.md
include/: debug.hpp  grid.hpp  linalg.hpp  options.hpp
scripts/: make_reproduce.sh  plot_convergence.py  plot_scaling.py
src/: bratu.cpp  debug.hpp  gmres.cpp  gmres.hpp  grid.cpp  io.cpp  linalg.cpp  main.cpp  newton.cpp  newton.hpp  options.cpp  options.hpp
src/include/: bratu.hpp  io.hpp  timing.hpp
tests/: fd_check.cpp
